@@ -1,5 +1,7 @@
 === 0.1.X (onggoing, to be released as 0.2) ===
 
+- Added html content field
+
 === 0.0.X (onggoing, to be released as 0.1) ===
 - Initial commit
 - Added DynamicContent model & migrations
@@ -15,7 +17,7 @@
 #   version and add a new `=== (ongoing) ===` to the top of the file
 #
 # === 1.0 ===
-# - a major version is created when the software reached a milestone and is 
+# - a major version is created when the software reached a milestone and is
 #   feature complete
 #
 # === 0.2 ===
